--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </header>
 
     <section class="hero-image">
-	  <img src="img/myPhoto.jpeg" width="250">
+	  <figure>
+	    <img src="img/myPhoto.jpeg" width="250" alt="My photo">
+	  </figure>
       <h1 class="heading">Anna Khromets</h1>
       <p>Junior Front-End Developer</p>
     </section>
